# Dimer

./: README.md  pyproject.toml
dimer/: __init__.py  cli.py  config.py
dimer/agent/: __init__.py  compaction.py  events.py  loop.py  prompts.py  session.py  tool_router.py
dimer/data_context/: __init__.py  analysis_state.py  artifact_registry.py  assumption_log.py  dataset_registry.py  dimerignore.py  notebook_context.py  schema_profile.py  workspace_scanner.py
dimer/providers/: __init__.py  anthropic.py  base.py  gemini.py  lmstudio.py  ollama.py  openai.py  openai_compatible.py
dimer/safety/: __init__.py  permissions.py  pii.py  privacy.py  process_limits.py
dimer/storage/: __init__.py  artifacts.py  sessions.py  sqlite.py
dimer/tools/: chart.py  dataset_profile.py  duckdb_exec.py  files.py  notebook_reader.py  python_exec.py  report.py  shell.py
dimer/ui/: __init__.py  approvals.py  console.py  interactive.py
tests/: test_agent_loop.py  test_artifact_registry.py  test_assumption_log.py  test_dataset_profile.py  test_duckdb_exec.py  test_ollama_provider.py  test_privacy_permissions.py  test_workspace_scanner.py
