[project]
name = "dimer"
version = "0.1.0"
description = "Terminal-native AI agent for data workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "pandas>=2.2.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
dimer = "dimer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dimer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
